fixed typo when spelling address

--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "AdressBook": {
+    "addressBook": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -16,7 +16,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/adress-book",
+            "outputPath": "dist/address-book",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AdressBook:build:production"
+              "browserTarget": "addressBook:build:production"
             },
             "development": {
-              "browserTarget": "AdressBook:build:development"
+              "browserTarget": "addressBook:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AdressBook:build"
+            "browserTarget": "addressBook:build"
           }
         },
         "test": {
